[package]
name = "ruut"
version = "0.4.0"
authors = ["Harry Bachrach <harrison.bachrach@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Make easy-to-type and easy-to-grab folder structures easy to read"
repository = "https://github.com/HarrisonB/ruut"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ruut"
path = "src/lib.rs"

[dependencies]
structopt = "0.2.10"
exitcode = "1.1.2"
serde_json = "1.0"
atty = "0.2"
itertools= "0.8.2"
